###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "jackson", version = "1.0.0")
bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "googletest", version = "1.14.0")
